# interview-cracking-machine

./: .gitignore  CLAUDE.md  README.md
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  index.css  nav.ts
app/src-tauri/: Cargo.toml  README.md  tauri.conf.json
app/src-tauri/src/: main.rs
app/src/components/: AssistantPanel.tsx  ConnectingOverlay.tsx  FocusTimer.tsx  History.tsx  IngestCourseForm.tsx  Landing.tsx  LiveCall.tsx  Markdown.tsx  MarkdownLite.tsx  NewGoalForm.tsx  Onboarding.tsx  ResultDetail.tsx  ResumeUpload.tsx  RoadmapNodeCard.tsx  RobotAvatar.tsx  RoundSelect.tsx  ScoredResult.tsx  SetupBanner.tsx  SetupWizard.tsx  Sidebar.tsx  TopBar.tsx  TopNav.tsx  Transcript.tsx
app/src/lib/: api.ts  discipline.ts  review.ts  roundMeta.ts  useAiAction.ts  useReveal.ts  useVoice.ts  (+1 more)
data/logs/: 2026-06-15.md
data/reviews/: eval-metrics-mqf6a3f7.md  rag-chunking-mqf69qrn.md
docs/: ICM-BUILD-SPEC.md  ICM-HLD-architecture.html  ICM-PRODUCT-PRD.md  ICM-PROGRESS.md  data-schema.md
goals/: interview-ready-90d.md  rag-specialist-sprint.md
mocks/: 2026-06-15-ai-engineer-b2.md  2026-06-15-interview-c3.md  2026-06-15-interview-d4.md  2026-06-15-interview-e5.md  2026-06-15-rag-a1.md
roadmaps/: interview-ready-90d.md  rag-specialist-sprint.md
schedule/: 2026-W25.md
server/: .env.example  README.md  package-lock.json  package.json
server/public/: index.html
server/src/: claude.ts  config.ts  db-check.ts  db.ts  index.ts  json.ts  prompts.ts  resume.ts  scratch.ts  tts.ts
supabase/migrations/: 0001_init.sql
(+16 files in other folders)
